# mchat

./: .gitignore  README.md  installer.iss  italian-trainer-claudeonly.md  italian-trainer.personas.md  mchat.spec  pyproject.toml
docs/: CODEBASE_GUIDE.md  DECISIONS.md
docs/plans/: personas.md
scripts/: build.bat
src/mchat/: __init__.py  config.py  db.py  db_migrations.py  debug_logger.py  diagram_prompt.py  dot_renderer.py  main.py  mermaid_renderer.py  pricing.py  provider_factory.py  router.py
src/mchat/models/: __init__.py  conversation.py  message.py  persona.py
src/mchat/providers/: __init__.py  apertus_provider.py  base.py  claude.py  gemini_provider.py  mistral_provider.py  (+3 more)
tests/: conftest.py  test_chat_widget.py  test_commands_personas.py  test_commands_pins.py  test_config.py  test_context_builder.py  test_dag_state.py  test_db.py  test_db_migrations.py  test_diagram_prompt.py  test_dot_markdown_ext.py  test_dot_renderer.py  test_edit_command.py  test_html_exporter.py  test_main_window.py  test_matrix_panel.py  test_mermaid_markdown_ext.py  test_mermaid_renderer.py  test_message_renderer.py  test_models.py  test_persona_dialog.py  test_persona_model.py  test_persona_pins.py  test_persona_resolution.py  test_persona_resolver.py  test_persona_service.py  test_persona_target.py  test_pricing.py  test_provider_factory.py  test_provider_panel.py  test_providers.py  test_router.py  test_settings_dialog.py  test_state.py  test_stats.py  test_stream_worker.py  test_title_generator.py  test_ui_widgets.py  test_visibility.py  test_visibility_command.py
(+46 files in other folders)
