[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mchat"
version = "0.1.0"
description = "Multi-provider LLM chat application"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.6",
    "anthropic>=0.40",
    "openai>=1.50",
    "mistralai>=1.0",
    "markdown>=3.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-qt>=4.4",
    "pyinstaller>=6.0",
    "Pillow>=10.0",
]

[project.scripts]
mchat = "mchat.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mchat = ["resources/*.png", "resources/*.ico"]

[tool.pytest.ini_options]
testpaths = ["tests"]
